// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
.c4 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 12px;
}

.c4::after,
.c4::before {
  display: block;
  position: absolute;
  top: 50%;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  content: "";
}

.c4::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c4::before,
[aria-selected="true"] .c4::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c4::after,
[aria-selected="true"] .c4::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4::before,
.c4::after {
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
}

.c2 + .c1 {
  border-top: 1px solid #c9d3df;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c3:hover,
.c3:focus,
.c3:focus-within,
.c3[aria-expanded="true"] {
  color: #006ab2;
}

.c5 {
  padding: 1rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c5.accordion__body--hidden {
  display: none;
}

.c0 {
  margin-bottom: 2rem;
}

<div>
  <h2>
    titre 0
  </h2>
  <p>
    paragraphe 0
  </p>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-0"
        aria-expanded="false"
        class="c3"
        id="accordion__title-0"
        role="button"
        tabindex="0"
      >
        <h2>
          titre 1
        </h2>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-0"
        class="c5 accordion__body--hidden"
        id="accordion__body-0"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-1"
        aria-expanded="false"
        class="c3"
        id="accordion__title-1"
        role="button"
        tabindex="0"
      >
        <h2>
          titre 2
        </h2>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-1"
        class="c5 accordion__body--hidden"
        id="accordion__body-1"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h3>
          titre 2-1
        </h3>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-2"
        aria-expanded="false"
        class="c3"
        id="accordion__title-2"
        role="button"
        tabindex="0"
      >
        <h2>
          titre 3
        </h2>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-2"
        class="c5 accordion__body--hidden"
        id="accordion__body-2"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
.c4 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 12px;
}

.c4::after,
.c4::before {
  display: block;
  position: absolute;
  top: 50%;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  content: "";
}

.c4::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c4::before,
[aria-selected="true"] .c4::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c4::after,
[aria-selected="true"] .c4::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4::before,
.c4::after {
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
}

.c2 + .c1 {
  border-top: 1px solid #c9d3df;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c3:hover,
.c3:focus,
.c3:focus-within,
.c3[aria-expanded="true"] {
  color: #006ab2;
}

.c5 {
  padding: 1rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c5.accordion__body--hidden {
  display: none;
}

.c0 {
  margin-bottom: 2rem;
}

<div>
  <h5>
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-3"
        aria-expanded="false"
        class="c3"
        id="accordion__title-3"
        role="button"
        tabindex="0"
      >
        <h5>
          titre 1
        </h5>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-3"
        class="c5 accordion__body--hidden"
        id="accordion__body-3"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-4"
        aria-expanded="false"
        class="c3"
        id="accordion__title-4"
        role="button"
        tabindex="0"
      >
        <h5>
          titre 2
        </h5>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-4"
        class="c5 accordion__body--hidden"
        id="accordion__body-4"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h6>
          titre 2-1
        </h6>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        aria-controls="accordion__body-5"
        aria-expanded="false"
        class="c3"
        id="accordion__title-5"
        role="button"
        tabindex="0"
      >
        <h5>
          titre 3
        </h5>
        <div
          class="c4"
          role="presentation"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__title-5"
        class="c5 accordion__body--hidden"
        id="accordion__body-5"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
